--- a/app/scss/tags.scss
+++ b/app/scss/tags.scss
@@ -49,6 +49,7 @@
   }
   .tags {
     padding-top: 10px;
+    height: calc(100%);
     //width: 305px;
     //height: 1000px;
     overflow-y: auto;
@@ -145,13 +146,13 @@
   }
   
   .tags-title {
-    display: inline;
     font-size: 17px;
-    line-height: 1.5;
     margin-top: 10px;
-    margin-bottom: 20px;
-    padding-right: 0;
+    margin-bottom: 10px;
     color: #000;
+    .sort-icon {
+      margin-right: 5px;
+    }
   }
   
   .multi-selected-tag  .tag-col-left{
